--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,5 +9,8 @@ jobs:
   build:
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
     with:
-      board: nice_nano_v2
-      shield: custom_keyboard
+      config-path: config
+    secrets: inherit
+    env:
+      SHIELD: custom_keyboard
+      BOARD: nice_nano_v2
