--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,6 @@ jobs:
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
     with:
       config-path: config
+      board: nice_nano_v2
+      shield: custom_keyboard
     secrets: inherit
-    # 👇 これが正しい位置
-    env:
-      SHIELD: custom_keyboard
-      BOARD: nice_nano_v2
