--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,8 @@ jobs:
   build:
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
     with:
-      config-path: config
-      board: nice_nano_v2
+      user-config: config  # `config-path` → `user-config` に変更
+      board-root: config   # ボード定義があるディレクトリ（必要に応じて）
       shield: custom_keyboard
+      board: nice_nano_v2
     secrets: inherit
