--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,8 @@ on:
 
 jobs:
   build:
-    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+    uses: zmkfirmware/zmk/.github/workflows/build.yaml@main
     with:
-      config-path: config
-      board: nice_nano_v2
-      shield: custom_keyboard
+      matrix_path: build.yaml
     secrets: inherit
+
