--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,15 @@
 name: Build ZMK Firmware
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
 
 jobs:
   build:
-    uses: zmkfirmware/zmk/.github/workflows/build.yaml@main
+    uses: zmkfirmware/zmk/.github/workflows/build.yml@main
     with:
-      matrix_path: build.yaml
+      board: nice_nano_v2
+      shield: custom_keyboard
     secrets: inherit
-
