--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,45 @@
 name: Build ZMK Firmware
 
 on:
-  workflow_dispatch:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build:
-    uses: zmkfirmware/zmk/.github/workflows/build.yml@main
-    with:
-      board: nice_nano_v2
-      shield: custom_keyboard
-    secrets: inherit
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout user config
+        uses: actions/checkout@v3
+
+      - name: Clone ZMK
+        uses: actions/checkout@v3
+        with:
+          repository: zmkfirmware/zmk
+          path: zmk
+          submodules: true
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.10
+
+      - name: Install west
+        run: |
+          pip install west
+          west init -l config
+          west update
+          west zephyr-export
+          pip install -r zmk/app/requirements.txt
+
+      - name: Build (left)
+        run: |
+          west build -s zmk/app -d build/custom_keyboard -b nice_nano_v2 -- -DSHIELD=custom_keyboard
+
+      - name: Upload firmware
+        uses: actions/upload-artifact@v4
+        with:
+          name: firmware
+          path: build/custom_keyboard/zephyr/zmk.uf2
