--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,12 +25,12 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.12
+          python-version: 3.10
 
       - name: Install west and dependencies
         run: |
           pip install west
-          west init -l config
+          west init zmk
           west update
           west zephyr-export
           pip install -r zmk/app/requirements.txt
@@ -40,7 +40,7 @@ jobs:
           west build -s zmk/app -d build/custom_keyboard -b nice_nano_v2 -- -DSHIELD=custom_keyboard
 
       - name: Upload firmware
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: firmware
           path: build/custom_keyboard/zephyr/zmk.uf2
