--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,22 +26,23 @@ jobs:
               python3-dev python3-pip python3-setuptools python3-wheel xz-utils file make \
               gcc gcc-multilib g++-multilib libsdl2-dev libmagic1
 
-      - name: Install west and Python deps
+      - name: Install west
+        run: pip install west
+
+      - name: Init west workspace in zmk/
         run: |
-          pip install west
-          west init -m https://github.com/zmkfirmware/zmk.git
+          mkdir zmk
+          cd zmk
+          west init -m https://github.com/zmkfirmware/zmk.git .
           west update
           west zephyr-export
-          pip install -r zmk/app/requirements.txt
+          pip install -r app/requirements.txt
 
-      - name: Build firmware (nice!nano v2)
+      - name: Build firmware
         run: |
           west build -s zmk/app -d build/nicenano_v2 -b nice_nano_v2 \
             -- -DSHIELD=custom_keyboard -DZMK_CONFIG=${{ github.workspace }}/config
 
       - name: Upload firmware artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: zmk-firmware
-          path: build/nicenano_v2/zephyr/zmk.uf2
+        uses: actions/upload-artifac
 
