--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,51 +2,46 @@ name: Build ZMK Firmware
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout user config
+      - name: Checkout config repository
         uses: actions/checkout@v3
-
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.12"
 
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y ninja-build gperf ccache dfu-util device-tree-compiler wget \
-              python3-dev python3-pip python3-setuptools python3-wheel xz-utils file make \
-              gcc gcc-multilib g++-multilib libsdl2-dev libmagic1
+          sudo apt-get install -y cmake ninja-build gperf \
+            ccache dfu-util device-tree-compiler wget \
+            python3-pip python3-setuptools python3-wheel xz-utils file
+          pip install west
 
-      - name: Install west
-        run: pip install west
+      - name: Initialize west workspace
+        run: west init -m https://github.com/zmkfirmware/zmk.git zmk
 
-      - name: Init west workspace in zmk/
+      - name: Update west and install Python deps
+        working-directory: zmk
         run: |
-          mkdir zmk
-          cd zmk
-          west init -m https://github.com/zmkfirmware/zmk.git .
           west update
           west zephyr-export
           pip install -r app/requirements.txt
 
-      - name: Build firmware
+      - name: Build firmware (nice!nano)
+        working-directory: zmk/app
         run: |
-          west build -s zmk/app -d build/nicenano_v2 -b nice_nano_v2 \
-            -- -DSHIELD=custom_keyboard -DZMK_CONFIG=${{ github.workspace }}/config
+          west build -s . -b nice_nano -- -DZMK_CONFIG="${{ github.workspace }}/config"
 
       - name: Upload firmware artifact
         uses: actions/upload-artifact@v4
         with:
-          name: zmk-firmware
-          path: build/nicenano_v2/zephyr/zmk.uf2
+          name: firmware-nice-nano
+          path: zmk/app/build/zephyr/zmk.uf2
+
 
 
