--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,43 +5,59 @@ on:
     branches:
       - main
   pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout config repository
-        uses: actions/checkout@v3
+      - name: Checkout user config
+        uses: actions/checkout@v4
 
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y cmake ninja-build gperf \
-            ccache dfu-util device-tree-compiler wget \
-            python3-pip python3-setuptools python3-wheel xz-utils file
-          pip install west
+          sudo apt-get install -y python3-pip git cmake ninja-build gperf ccache dfu-util wget device-tree-compiler libncurses-dev libffi-dev \
+            libusb-1.0-0-dev libssl-dev python3-dev python3-setuptools python3-wheel xz-utils file
+
+      - name: Install west
+        run: pip3 install west
 
       - name: Initialize west workspace
-        run: west init -m https://github.com/zmkfirmware/zmk.git zmk
+        run: west init -m https://github.com/zmkfirmware/zmk.git --mr develop zmk
 
-      - name: Update west and install Python deps
-        working-directory: zmk
+      - name: Update west modules
         run: |
+          cd zmk
           west update
-          west zephyr-export
-          pip install -r app/requirements.txt
 
-      - name: Build firmware (nice!nano)
-        working-directory: zmk/app
+      - name: Export Zephyr CMake package
         run: |
-          west build -s . -b nice_nano -- -DZMK_CONFIG="${{ github.workspace }}/config"
+          cd zmk
+          west zephyr-export
 
-      - name: Upload firmware artifact
+      - name: Install Python dependencies
+        run: |
+          cd zmk
+          pip3 install -r zephyr/scripts/requirements.txt
+
+      - name: Build firmware (left)
+        run: |
+          west build -s zmk/app -d build/left -b nice_nano_v2 -- -DSHIELD=<your_shield_name>_left -DZMK_CONFIG=$GITHUB_WORKSPACE/config
+
+      - name: Build firmware (right)
+        run: |
+          west build -s zmk/app -d build/right -b nice_nano_v2 -- -DSHIELD=<your_shield_name>_right -DZMK_CONFIG=$GITHUB_WORKSPACE/config
+
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: firmware-nice-nano
-          path: zmk/app/build/zephyr/zmk.uf2
+          name: firmware
+          path: |
+            build/left/zephyr/zmk.uf2
+            build/right/zephyr/zmk.uf2
 
 
 
